# style-guide-enricher-agent

./: README.md  pyproject.toml  research_findings.md  updated_style_guide.md
src/style_guide_enricher/: base_style_guide_template.md  crew.py  main.py
src/style_guide_enricher/config/: agents.yaml  tasks.yaml
